--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {erl_opts, [debug_info]}.
-{deps, [ {getopt, "0.8.2"} ]}.
+{deps, [ {getopt, "0.8.2"}
+        ,{erlexec, "1.2.2"} ]}.
 
 {relx, [{release, { maurs, "0.1.0" },
          [maurs,
